<resources>
    <string name="app_name">Keep Notes</string>
    <string name="welcome">Welcome !!!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="registration">REGISTRATION</string>
    <string name="required">Required</string>
    <string name="phone_number">Phone No.</string>
    <string name="register">Register</string>
    <string name="name">Full Name</string>
    <string name="title">Title</string>
</resources>